plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.13'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.cleaning'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	// OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	 // JWT (카카오 로그인 후 토큰 발급용)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.6'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'com.auth0:java-jwt:3.13.0'


	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// Oracle DB
	runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
	
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
}

tasks.named('test') {
	useJUnitPlatform()
}
